tests/miniJava/neg/006757_mutation.MiniJava
class java { void static void Main ( String [ ] java ) { { } } }
